# focusgroup

./: Dockerfile  Makefile  README.md  audio__recorder.py  conftest.py  docs__Makefile  docs__index.rst  focuspanel.spec  gui__main_window.py  launcher.sh  processing__diarizer.py  processing__profile_builder.py  processing__recommender.py  processing__transcriber.py  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  run_gui_mock.py  run_headless_test.py  storage__database.py  tests__test_diarizer.py  tests__test_logger.py  tests__test_main_window.py  tests__test_recommender.py  tests__test_recorder.py  tests__test_transcriber.py  utils__config.py  utils__logger.py  validate_structure.sh
.github/workflows/: refolder.yml
audio/: recorder.py
docs/: conf.py
gui/: main_window.py
processing/: model_providers.py  profile_builder.py  recommender.py  transcriber.py
storage/: database.py
tests/: test_config.py  test_database.py  test_diarizer.py  test_main_window.py  test_profile_builder.py  test_recorder.py  test_transcriber.py
utils/: config.py  logger.py
